feat: encryption module
Signed-off-by: Goran Draganic <goran@daytona.io>

--- a/apps/api/.env
+++ b/apps/api/.env
@@ -43,3 +43,6 @@ S3_SECRET_KEY=minioadmin
 S3_DEFAULT_BUCKET=daytona
 
 ENVIRONMENT=dev
+
+ENCRYPTION_KEY=supersecretkey
+ENCRYPTION_SALT=supersecretsalt
