feat(runner): grpc docker runner
Signed-off-by: Goran Draganic <goran@daytona.io>
Signed-off-by: Luka Brecic <luka.brecic3@gmail.com>
Signed-off-by: Vedran <vedran.jukic@gmail.com>

Co-authored-by: Luka Brecic <luka.brecic3@gmail.com>
Co-authored-by: Goran Draganic <goran@daytona.io>
Co-authored-by: Vedran <vedran.jukic@gmail.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,6 +34,17 @@
       "preLaunchTask": "debug-build-runner"
     },
     {
+      "name": "Runner Docker",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}/apps/runner-docker/cmd/main.go",
+      "console": "integratedTerminal",
+      "envFile": "${workspaceFolder}/apps/runner-docker/.env",
+      "output": "${workspaceFolder}/dist/apps/runner-docker",
+      "preLaunchTask": "debug-build-runner-docker"
+    },
+    {
       "name": "Daemon",
       "type": "go",
       "request": "launch",
