--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "nx run-many --target=build --all --parallel=$(getconf _NPROCESSORS_ONLN) --configuration=development",
     "build:production": "nx run-many --target=build --all --parallel=$(getconf _NPROCESSORS_ONLN) --configuration=production",
     "serve": "nx run-many --target=serve --all --exclude=daemon --parallel=$(getconf _NPROCESSORS_ONLN) --configuration=development",
-    "serve:skip-runner": "nx run-many --target=serve --all --exclude=runner,daemon --parallel=$(getconf _NPROCESSORS_ONLN) --configuration=development",
+    "serve:skip-runner": "nx run-many --target=serve --all --exclude=runner,daemon,runner-docker --parallel=$(getconf _NPROCESSORS_ONLN) --configuration=development",
     "serve:skip-proxy": "nx run-many --target=serve --all --exclude=proxy,daemon --parallel=$(getconf _NPROCESSORS_ONLN) --configuration=development",
     "serve:production": "nx run-many --target=serve --all --exclude=daemon --parallel=$(getconf _NPROCESSORS_ONLN) --configuration=production",
     "generate:openapi": "nx run-many --target=openapi --all",
@@ -41,6 +41,8 @@
     "@aws-sdk/lib-storage": "^3.798.0",
     "@dotenvx/dotenvx": "^1.25.1",
     "@esm2cjs/cacheable-lookup": "^7.0.0",
+    "@grpc/grpc-js": "^1.13.4",
+    "@grpc/proto-loader": "^0.7.15",
     "@iarna/toml": "^2.2.5",
     "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/axios": "^4.0.0",
@@ -49,6 +51,7 @@
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.8",
     "@nestjs/event-emitter": "^3.0.1",
+    "@nestjs/microservices": "^11.0.13",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.8",
     "@nestjs/platform-socket.io": "^11.0.13",
@@ -219,6 +222,7 @@
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
+    "ts-proto": "^2.7.5",
     "tslib": "^2.8.1",
     "tsx": "^4.20.3",
     "typedoc": "~0.27.7",
