--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@daytonaio/api-client": ["libs/api-client/src/index.ts"],
       "@daytonaio/runner-api-client": ["libs/runner-api-client/src/index.ts"],
+      "@daytonaio/runner-grpc-client": ["libs/runner-grpc-client/src/index.ts"],
       "@daytonaio/sdk": ["libs/sdk-typescript/src/index.ts"]
     }
   },
