--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "astro-expressive-code": "^0.41.2",
     "axios": "^1.6.1",
     "axios-debug-log": "^1.0.0",
+    "busboy": "^1.0.0",
     "cache-manager": "^6.4.1",
     "cache-manager-memcached-store": "^6.0.1",
     "cacheable-lookup": "^7.0.0",
@@ -172,6 +173,7 @@
     "@swc/helpers": "~0.5.11",
     "@tailwindcss/postcss": "^4.1.11",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/busboy": "^1.0.0",
     "@types/dockerode": "^3.3.34",
     "@types/ejs": "^3.1.5",
     "@types/jest": "^29.5.12",
