feat: block network and allow ips
Signed-off-by: Vedran <vedran.jukic@gmail.com>

--- a/apps/runner/pkg/api/docs/swagger.yaml
+++ b/apps/runner/pkg/api/docs/swagger.yaml
@@ -53,6 +53,10 @@ definitions:
       memoryQuota:
         minimum: 1
         type: integer
+      networkAllowAll:
+        type: boolean
+      networkAllowList:
+        type: string
       osUser:
         type: string
       registry:
