--- a/apps/runner/pkg/api/docs/swagger.yaml
+++ b/apps/runner/pkg/api/docs/swagger.yaml
@@ -74,6 +74,7 @@ definitions:
         type: array
     required:
       - id
+      - networkAllowAll
       - osUser
       - snapshot
       - userId
