--- a/libs/sdk-python/pyproject.toml
+++ b/libs/sdk-python/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "aiofiles>=24.1.0,<24.2.0",
     "toml>=0.10.0,<0.11.0",
     "obstore>=0.7.0,<0.8.0",
+    "websockets>=15.0.0,<16.0.0"
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
