feat(api,runner): pending archive state - sandboxes can be started while archival is pending - backups are cancelled on the runner if a sandbox is started/stopped/destroyed - refactored logic for transitioning to archived state - archived state is reached only when a backup is created successfully - fixed some locking issues with the backup manager
Signed-off-by: Toma Puljak <toma.puljak@hotmail.com>

--- a/apps/runner/.env
+++ b/apps/runner/.env
@@ -14,3 +14,5 @@ AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=minioadmin
 AWS_SECRET_ACCESS_KEY=minioadmin
 AWS_DEFAULT_BUCKET=daytona
+
+LOG_LEVEL=debug
