--- a/apps/runner/pkg/api/docs/swagger.yaml
+++ b/apps/runner/pkg/api/docs/swagger.yaml
@@ -395,7 +395,7 @@ paths:
         - application/json
       responses:
         '201':
-          description: Backup created
+          description: Backup started
           schema:
             type: string
         '400':
